# im_chat

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md
.github/workflows/: im-app-windows.yml
deploy/: DEPLOYMENT-RUNBOOK.md  README.md
deploy/docker-compose/: .env.example  docker-compose.yml
deploy/scripts/: 00-install-docker.sh  backup.sh  deploy.sh  healthcheck.sh  tune-host.sh
docs/: README.md  architecture.md  backend-architecture-review.md  backend-status-review.md  call-service-design.md  channel-discovery-design.md  cs-service-design.md  friend-service-design.md  frontend-architecture.md  im-server-design.md  middleware-selection.md  moments-design.md  open-platform-design.md  protocol.md  review-checklist.md  wallet-redpacket-design.md
docs/frontend/: TASKS.md
docs/research/: open-source-im-notes.md
docs/reviews/: 2026-06-13-pr1-fix-worklist.md  2026-06-13-pr1-mvp-foundation.md  2026-06-13-pr1-rereview.md  2026-06-13-pr10-conv-list-version.md  (+14 more)
im-admin/: README.md
im-app/: .gitignore  Makefile  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  shorebird.yaml
im-gateway-rust/: Cargo.toml  Dockerfile  README.md  build.rs
im-gateway-rust/src/: client_ip.rs  config.rs  connection.rs  frame_codec.rs  handshake_limiter.rs  main.rs  metrics.rs  proto.rs  push.rs  rpc.rs  state.rs
im-proto/: README.md
im-server/: Dockerfile  README.md  pom.xml
im-web/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+669 files in other folders)
